--- a/lib/boleto_bancario/views/santander.erb
+++ b/lib/boleto_bancario/views/santander.erb
@@ -1,4 +1,3 @@
-<%= @boleto.codigo_de_barras %>
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html"> 
@@ -84,7 +83,7 @@
           <strong>Pague pelo internet banking</strong><br/>
           utilize a linha edit&aacute;vel ao lado
         </div>
-        <input type="text" value="23793.39126 50001.638464 50001.747901 7 56420000009490" class="editable_line">
+        <input type="text" value="<%= @boleto.linha_digitavel %>" class="editable_line">
       </div>
     </div>  
     
@@ -114,7 +113,7 @@
             <td width="320">
               <font size="3" face="Arial, Helvetica, sans-serif">
                 <img src="img/ico.gif" vspace="0" width="25" align="absbottom" height="23" hspace="1">
-                <b>&nbsp;Bradesco</b>
+                <b>&nbsp;Santander</b>
               </font>
             </td>
             <td valign="bottom" width="320" align="right">
@@ -130,22 +129,20 @@
         <tr> 
             <td width="43%">
               <font size="1" face="Arial, Helvetica, sans-serif">&nbsp;Cedente<br></font>
-              <font size="2" face="Arial, Helvetica, sans-serif">
-                <b>&nbsp;MoIP Pagamentos S.A.</b>
-              </font>
+              <font size="2" face="Arial, Helvetica, sans-serif"><%= @boleto.cedente %></font>
               <font size="1" face="Arial, Helvetica, sans-serif">&nbsp;</font>
             </td>
             <td width="21%">
               <div align="center">
                 <font size="1" face="Arial, Helvetica, sans-serif">&nbsp;Ag&ecirc;ncia/Cod. Cedente<br></font>
-                <font size="2" face="Arial, Helvetica, sans-serif">3391-0 / 0017479-3</font>
+                <font size="2" face="Arial, Helvetica, sans-serif"><%= @boleto.agencia %> / <%= @boleto.conta_corrente %>-<%= @boleto.digito_conta_corrente %></font>
                 <font size="1" face="Arial, Helvetica, sans-serif"></font>
               </div>
             </td>
             <td width="18%">
               <div align="center">
                 <font size="1" face="Arial, Helvetica, sans-serif">Data do Documento<br></font>
-              <font size="2" face="Arial, Helvetica, sans-serif">15/03/2013</font>
+              <font size="2" face="Arial, Helvetica, sans-serif"><%= Date.today %></font>
             </div>
           </td>
             <td width="18%">
@@ -153,7 +150,7 @@
             <font size="3" face="Arial">
               <b> 
                     <div align="right">
-                      <font size="2" face="Arial, Helvetica, sans-serif">19/03/2013&nbsp;</font>
+                      <font size="2" face="Arial, Helvetica, sans-serif"><%= @boleto.data_vencimento%>&nbsp;</font>
                     </div>
                   </b>
                 </font>
@@ -167,7 +164,7 @@
                 <b>&nbsp;</b>
               </font>
               <font size="2" face="Arial">
-                <b>Oliver Barnes</b>
+                <b><%= @boleto.sacado %></b>
               </font>
               <font size="1" face="Arial, Helvetica, sans-serif">&nbsp;</font>
             </td>
@@ -175,7 +172,7 @@
               <div align="center">
                 <font size="1" face="Arial">N&uacute;mero Documento</font>
                 <font size="1" face="Arial, Helvetica, sans-serif"><br></font>
-                <font size="2" face="Arial">00016384650</font>
+                <font size="2" face="Arial"><%= @boleto.numero_documento %></font>
                 <font size="1" face="Arial, Helvetica, sans-serif"></font>
               </div>
             </td>
@@ -183,7 +180,7 @@
               <div align="center">
                 <font size="1" face="Arial">Carteira/Nosso N&uacute;mero</font>
                 <font size="1" face="Arial, Helvetica, sans-serif"><br></font>
-                <font size="2" face="Arial">25/00016384650-5</font>
+                <font size="2" face="Arial"><%= @boleto.carteira %>/00016384650-5</font>
               </div>
             </td>
           <td width="18%">
@@ -192,7 +189,7 @@
                 <b> 
                   <div align="right">
                     <font size="2" face="Arial, Helvetica, sans-serif">
-                      <b>94,90</b>
+                      <b><%= @boleto.valor_documento %></b>
                     </font>
                     <font size="3" face="Arial">
                       <b>
@@ -213,10 +210,7 @@
                   <td width="626">
                     <font style="font-size: 10px;" face="Arial">Demonstrativo
                       <br>
-                            <b>
-                              olook processa seus pagamentos utilizando tecnologia e seguran&ccedil;a MoIP
-                              <br/>
-                              <br/>
+                            <b>                              
                         ===============================================================<br>
                         Pagamento<br>
                         ===============================================================<br>
@@ -256,10 +250,10 @@
     </tbody></table>
     <table width="640" border="0" cellpadding="0" cellspacing="0">
       <tbody><tr> 
-        <td valign="bottom" width="112"><font size="3" face="Arial, Helvetica, sans-serif"><img src="img/ico.gif" vspace="0" width="25" align="absbottom" height="23" hspace="1"><b>&nbsp;Bradesco</b></font></td>
-        <td valign="bottom" width="66" align="center"> <font size="4" face="Arial, Helvetica, sans-serif"><b><img src="img/traco.htm" width="3" align="absbottom" height="23">&nbsp;<font color="#999999">237-2</font>&nbsp;</b></font><img src="img/traco_002.htm" width="3" align="absbottom" height="23"> 
+        <td valign="bottom" width="112"><font size="3" face="Arial, Helvetica, sans-serif"><img src="img/ico.gif" vspace="0" width="25" align="absbottom" height="23" hspace="1"><b>&nbsp;Santander</b></font></td>
+        <td valign="bottom" width="66" align="center"> <font size="4" face="Arial, Helvetica, sans-serif"><b><img src="img/traco.htm" width="3" align="absbottom" height="23">&nbsp;<font color="#999999"><%= @boleto.agencia %></font>&nbsp;</b></font><img src="img/traco_002.htm" width="3" align="absbottom" height="23"> 
         </td>
-        <td valign="bottom" width="462" align="right" nowrap="nowrap"><font size="3" face="Arial">23793.39126 50001.638464 50001.747901 7 56420000009490&nbsp;</font></td>
+        <td valign="bottom" width="462" align="right" nowrap="nowrap"><font size="3" face="Arial"><%= @boleto.linha_digitavel %>&nbsp;</font></td>
       </tr>
     </tbody></table>
     <table bordercolorlight="#FFFFFF" width="640" border="1" cellpadding="1" cellspacing="0">
@@ -281,7 +275,7 @@
                 </font></td>
             </tr>
             <tr bgcolor="#cccccc"> 
-              <td align="right"><font face="Arial, Helvetica, sans-serif"><b><font size="3">19/03/2013</font></b></font><font size="3" face="Arial"><b><font size="2" face="Arial, Helvetica, sans-serif">&nbsp;</font></b></font><font face="Arial, Helvetica, sans-serif"><br>
+              <td align="right"><font face="Arial, Helvetica, sans-serif"><b><font size="3"><%= @boleto.data_vencimento%></font></b></font><font size="3" face="Arial"><b><font size="2" face="Arial, Helvetica, sans-serif">&nbsp;</font></b></font><font face="Arial, Helvetica, sans-serif"><br>
                 </font></td>
             </tr>
           </tbody></table></td>
@@ -292,7 +286,7 @@
               <td valign="top"><font size="1" face="Arial">&nbsp;Cedente </font><br> </td>
             </tr>
             <tr> 
-              <td valign="top"><font size="2" face="Arial"><b>&nbsp;MoIP Pagamentos S.A.</b></font><br> </td>
+              <td valign="top"><font size="2" face="Arial"><b>&nbsp;<%= @boleto.cedente %></b></font><br> </td>
             </tr>
           </tbody></table></td>
         <td valign="top" width="140"> <table width="100%" border="0" cellpadding="1" cellspacing="1">
@@ -301,7 +295,7 @@
                 Cedente</font></td>
             </tr>
             <tr> 
-              <td align="right"><font size="2" face="Arial, Helvetica, sans-serif"><b>3391-0 / 0017479-3</b></font></td>
+              <td align="right"><font size="2" face="Arial, Helvetica, sans-serif"><b><%= @boleto.agencia %> / <%= @boleto.codigo_cedente %></b></font></td>
             </tr>
           </tbody></table></td>
       </tr>
@@ -312,7 +306,7 @@
                 </div></td>
             </tr>
             <tr> 
-              <td align="middle"> <div align="center"><font size="2" face="Arial, Helvetica, sans-serif">15/03/2013</font><br>
+              <td align="middle"> <div align="center"><font size="2" face="Arial, Helvetica, sans-serif"><%= Date.today %></font><br>
                 </div></td>
             </tr>
           </tbody></table></td>
@@ -322,7 +316,7 @@
                 </div></td>
             </tr>
             <tr> 
-              <td align="middle"> <div align="center"><font size="2" face="Arial, Helvetica, sans-serif">00016384650</font><br>
+              <td align="middle"> <div align="center"><font size="2" face="Arial, Helvetica, sans-serif"><%= @boleto.numero_documento %></font><br>
                 </div></td>
             </tr>
           </tbody></table></td>
@@ -351,7 +345,7 @@
               <td nowrap="nowrap"> <div align="center"><font size="1" face="Arial">Data Processamento</font></div></td>
             </tr>
             <tr> 
-              <td align="middle" nowrap="nowrap"> <div align="center"><font size="2" face="Arial">15/03/2013</font></div></td>
+              <td align="middle" nowrap="nowrap"> <div align="center"><font size="2" face="Arial"><%= Date.today %></font></div></td>
             </tr>
           </tbody></table></td>
         <td width="140"> <table width="100%" border="0" cellpadding="0" cellspacing="0">
@@ -382,7 +376,7 @@
               <td align="center"> <font size="1" face="Arial">Carteira</font></td>
             </tr>
             <tr valign="top"> 
-              <td align="center"><font size="2" face="Arial">25</font></td>
+              <td align="center"><font size="2" face="Arial"><%= @boleto.carteira %></font></td>
             </tr>
           </tbody></table></td>
         <td valign="top" width="93"> <table width="100%" border="0" cellpadding="0" cellspacing="0">
@@ -421,7 +415,7 @@
                 Valor do Documento </font></td>
             </tr>
             <tr> 
-              <td align="right" bgcolor="lightgrey" height="50%"><font face="Arial, Helvetica, sans-serif"><b><font size="2">94,90</font></b></font><font size="3" face="Arial"><b><font size="2" face="Arial, Helvetica, sans-serif">&nbsp;</font></b></font></td>
+              <td align="right" bgcolor="lightgrey" height="50%"><font face="Arial, Helvetica, sans-serif"><b><font size="2"><%= @boleto.valor_documento %></font></b></font><font size="3" face="Arial"><b><font size="2" face="Arial, Helvetica, sans-serif">&nbsp;</font></b></font></td>
             </tr>
           </tbody></table></td>
       </tr>
@@ -478,7 +472,7 @@
               <td valign="top" width="100"><font size="1" face="Arial, Helvetica, sans-serif">&nbsp;Sacado 
                 </font><font face="Arial, Helvetica, sans-serif"><br>
                 </font></td>
-              <td valign="top" width="100%" height="40"><font size="1" face="Arial, Helvetica, sans-serif">&nbsp;Oliver Barnes<br>
+              <td valign="top" width="100%" height="40"><font size="1" face="Arial, Helvetica, sans-serif">&nbsp;<%= @boleto.sacado %><br>
                 &nbsp;Fern&atilde;o Dias, 251/ - Pinheiros<br>
                 &nbsp;05427-010 - S&atilde;o Paulo, S&atilde;o Paulo</font></td>
             </tr>
